tests/snapshots/lexer_snapshots__lexer_all@tokens-13.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/13_null.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "find_user",
            ),
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: LeftParen,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "id",
            ),
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Colon,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Pipe,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Null,
            position: 39,
            line: 1,
            column: 40,
        },
        Token {
            token_type: LeftBrace,
            position: 41,
            line: 1,
            column: 42,
        },
        Token {
            token_type: If,
            position: 46,
            line: 2,
            column: 5,
        },
        Token {
            token_type: LeftParen,
            position: 48,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "id",
            ),
            position: 50,
            line: 2,
            column: 9,
        },
        Token {
            token_type: EqEq,
            position: 53,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 55,
            line: 2,
            column: 14,
        },
        Token {
            token_type: RightParen,
            position: 56,
            line: 2,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 58,
            line: 2,
            column: 17,
        },
        Token {
            token_type: StringLit(
                "Admin",
            ),
            position: 70,
            line: 3,
            column: 12,
        },
        Token {
            token_type: RightBrace,
            position: 74,
            line: 4,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 79,
            line: 4,
            column: 9,
        },
        Token {
            token_type: If,
            position: 82,
            line: 4,
            column: 12,
        },
        Token {
            token_type: LeftParen,
            position: 84,
            line: 4,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "id",
            ),
            position: 86,
            line: 4,
            column: 16,
        },
        Token {
            token_type: EqEq,
            position: 89,
            line: 4,
            column: 19,
        },
        Token {
            token_type: Int(
                "2",
            ),
            position: 91,
            line: 4,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 92,
            line: 4,
            column: 22,
        },
        Token {
            token_type: LeftBrace,
            position: 94,
            line: 4,
            column: 24,
        },
        Token {
            token_type: StringLit(
                "Guest",
            ),
            position: 106,
            line: 5,
            column: 12,
        },
        Token {
            token_type: RightBrace,
            position: 110,
            line: 6,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 115,
            line: 6,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 117,
            line: 6,
            column: 11,
        },
        Token {
            token_type: Null,
            position: 126,
            line: 7,
            column: 9,
        },
        Token {
            token_type: RightBrace,
            position: 130,
            line: 8,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 132,
            line: 9,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 142,
            line: 11,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 148,
            line: 11,
            column: 15,
        },
        Token {
            token_type: LeftParen,
            position: 149,
            line: 11,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "id",
            ),
            position: 151,
            line: 11,
            column: 18,
        },
        Token {
            token_type: Colon,
            position: 152,
            line: 11,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 156,
            line: 11,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 157,
            line: 11,
            column: 24,
        },
        Token {
            token_type: Colon,
            position: 158,
            line: 11,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 162,
            line: 11,
            column: 29,
        },
        Token {
            token_type: LeftBrace,
            position: 164,
            line: 11,
            column: 31,
        },
        Token {
            token_type: Var,
            position: 170,
            line: 12,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "user",
            ),
            position: 175,
            line: 12,
            column: 11,
        },
        Token {
            token_type: Eq,
            position: 177,
            line: 12,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "find_user",
            ),
            position: 187,
            line: 12,
            column: 23,
        },
        Token {
            token_type: LeftParen,
            position: 188,
            line: 12,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "id",
            ),
            position: 190,
            line: 12,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 191,
            line: 12,
            column: 27,
        },
        Token {
            token_type: Semicolon,
            position: 192,
            line: 12,
            column: 28,
        },
        Token {
            token_type: If,
            position: 197,
            line: 13,
            column: 5,
        },
        Token {
            token_type: LeftParen,
            position: 199,
            line: 13,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "user",
            ),
            position: 203,
            line: 13,
            column: 11,
        },
        Token {
            token_type: Is,
            position: 206,
            line: 13,
            column: 14,
        },
        Token {
            token_type: Null,
            position: 211,
            line: 13,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 212,
            line: 13,
            column: 20,
        },
        Token {
            token_type: LeftBrace,
            position: 214,
            line: 13,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "no user with id ",
            ),
            position: 237,
            line: 14,
            column: 23,
        },
        Token {
            token_type: Plus,
            position: 239,
            line: 14,
            column: 25,
        },
        Token {
            token_type: LeftParen,
            position: 241,
            line: 14,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "id",
            ),
            position: 243,
            line: 14,
            column: 29,
        },
        Token {
            token_type: As,
            position: 246,
            line: 14,
            column: 32,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 250,
            line: 14,
            column: 36,
        },
        Token {
            token_type: RightParen,
            position: 251,
            line: 14,
            column: 37,
        },
        Token {
            token_type: RightBrace,
            position: 255,
            line: 15,
            column: 4,
        },
        Token {
            token_type: Else,
            position: 260,
            line: 15,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 262,
            line: 15,
            column: 11,
        },
        Token {
            token_type: StringLit(
                "hello, ",
            ),
            position: 276,
            line: 16,
            column: 14,
        },
        Token {
            token_type: Plus,
            position: 278,
            line: 16,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 280,
            line: 16,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "user",
            ),
            position: 284,
            line: 16,
            column: 22,
        },
        Token {
            token_type: As,
            position: 287,
            line: 16,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 291,
            line: 16,
            column: 29,
        },
        Token {
            token_type: RightParen,
            position: 292,
            line: 16,
            column: 30,
        },
        Token {
            token_type: RightBrace,
            position: 296,
            line: 17,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 298,
            line: 18,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 308,
            line: 20,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 313,
            line: 20,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 314,
            line: 20,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 315,
            line: 20,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 316,
            line: 20,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 320,
            line: 20,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 322,
            line: 20,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 330,
            line: 21,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 331,
            line: 21,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 336,
            line: 21,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 337,
            line: 21,
            column: 15,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 338,
            line: 21,
            column: 16,
        },
        Token {
            token_type: RightParen,
            position: 339,
            line: 21,
            column: 17,
        },
        Token {
            token_type: RightParen,
            position: 340,
            line: 21,
            column: 18,
        },
        Token {
            token_type: Semicolon,
            position: 341,
            line: 21,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 349,
            line: 22,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 350,
            line: 22,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 355,
            line: 22,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 356,
            line: 22,
            column: 15,
        },
        Token {
            token_type: Int(
                "2",
            ),
            position: 357,
            line: 22,
            column: 16,
        },
        Token {
            token_type: RightParen,
            position: 358,
            line: 22,
            column: 17,
        },
        Token {
            token_type: RightParen,
            position: 359,
            line: 22,
            column: 18,
        },
        Token {
            token_type: Semicolon,
            position: 360,
            line: 22,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 368,
            line: 23,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 369,
            line: 23,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 374,
            line: 23,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 375,
            line: 23,
            column: 15,
        },
        Token {
            token_type: Int(
                "99",
            ),
            position: 377,
            line: 23,
            column: 17,
        },
        Token {
            token_type: RightParen,
            position: 378,
            line: 23,
            column: 18,
        },
        Token {
            token_type: RightParen,
            position: 379,
            line: 23,
            column: 19,
        },
        Token {
            token_type: Semicolon,
            position: 380,
            line: 23,
            column: 20,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 384,
            line: 24,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 386,
            line: 25,
            column: 2,
        },
    ],
)
