tests/snapshots/lexer_snapshots__lexer_all@tokens-130.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p2_function_signature_resolved.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "add",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: LeftParen,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: Colon,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Comma,
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Colon,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: RightParen,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Colon,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: LeftBrace,
            position: 35,
            line: 1,
            column: 36,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 37,
            line: 1,
            column: 38,
        },
        Token {
            token_type: RightBrace,
            position: 39,
            line: 1,
            column: 40,
        },
    ],
)
