tests/snapshots/lexer_snapshots__lexer_all@tokens-132.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p1_struct_skeleton_inserted.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Foo",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: RightBrace,
            position: 13,
            line: 1,
            column: 14,
        },
    ],
)
